k8-yaml/network-policies/bar-namespace.yaml
apiVersion: "v1"
kind: "Namespace"
metadata: 
  name: "bar"
  labels: 
    name: "bar"
