k8-yaml/network-policies/foo-namespace.yaml
apiVersion: "v1"
kind: "Namespace"
metadata: 
  name: "foo"
  labels: 
    name: "foo"
