k8-yaml/network-policies/network-policy-bar.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: bar
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
