k8-yaml/network-policies/network-policy-foo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: foo
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
